{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 444,
  "lineage": "74625d0c-b3b2-e454-52d2-345be2556c86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108896227434:internet-gateway/igw-001ef5313e129afd9",
            "id": "igw-001ef5313e129afd9",
            "owner_id": "108896227434",
            "vpc_id": "vpc-0d684cf1bb6c22310"
          },
          "dependencies": [
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:108896227434:loadbalancer/app/asg-lb/70842d7889a6fa3e",
            "arn_suffix": "app/asg-lb/70842d7889a6fa3e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "asg-lb-1567118011.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:108896227434:loadbalancer/app/asg-lb/70842d7889a6fa3e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "asg-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bc6ac5ccfe873c1f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002e0853de8ac8ec1"
              },
              {
                "subnet_id": "subnet-0b43fcb2d309e48b1"
              }
            ],
            "subnets": [
              "subnet-002e0853de8ac8ec1",
              "subnet-0b43fcb2d309e48b1"
            ],
            "vpc_id": "vpc-0d684cf1bb6c22310",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_allow_http",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-1_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:108896227434:listener/app/asg-lb/70842d7889a6fa3e/f7d57be9d25fb03f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:108896227434:targetgroup/asg-lb-target-group/4b3aa28e8d3f0978",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:108896227434:listener/app/asg-lb/70842d7889a6fa3e/f7d57be9d25fb03f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:108896227434:loadbalancer/app/asg-lb/70842d7889a6fa3e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-1",
            "aws_lb_target_group.lb-1_target-group",
            "aws_security_group.lb_allow_http",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-1_target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:108896227434:targetgroup/asg-lb-target-group/4b3aa28e8d3f0978",
            "arn_suffix": "targetgroup/asg-lb-target-group/4b3aa28e8d3f0978",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:108896227434:targetgroup/asg-lb-target-group/4b3aa28e8d3f0978",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "asg-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d684cf1bb6c22310"
          },
          "dependencies": [
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108896227434:network-acl/acl-0634e4f4a7de5c7b7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0634e4f4a7de5c7b7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "108896227434",
            "subnet_ids": [],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0d684cf1bb6c22310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108896227434:route-table/rtb-09c4af529774fcd65",
            "id": "rtb-09c4af529774fcd65",
            "owner_id": "108896227434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001ef5313e129afd9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d684cf1bb6c22310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f087ed95eafbfd34",
            "route_table_id": "rtb-09c4af529774fcd65",
            "subnet_id": "subnet-002e0853de8ac8ec1"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.rt_1",
            "aws_subnet.subnet-1",
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011d82ac46a41004d",
            "route_table_id": "rtb-09c4af529774fcd65",
            "subnet_id": "subnet-0b43fcb2d309e48b1"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.rt_1",
            "aws_subnet.subnet-2",
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_allow_http_and_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108896227434:security-group/sg-07a14994654866686",
            "description": "allow http and ssh inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a14994654866686",
            "ingress": [],
            "name": "allow_http_and_ssh",
            "name_prefix": "",
            "owner_id": "108896227434",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d684cf1bb6c22310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_asg_and_lb_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108896227434:security-group/sg-0bc6ac5ccfe873c1f",
            "description": "allow http inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc6ac5ccfe873c1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_allow_http",
            "name_prefix": "",
            "owner_id": "108896227434",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d684cf1bb6c22310"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "test",
            "from_port": 22,
            "id": "sgrule-2049530587",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07a14994654866686",
            "security_group_rule_id": "sgr-0b9de71b8657a22ff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_allow_http_and_ssh",
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "test",
            "from_port": 80,
            "id": "sgrule-3433236334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07a14994654866686",
            "security_group_rule_id": "sgr-049979bbda334e9f5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_allow_http_and_ssh",
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108896227434:subnet/subnet-002e0853de8ac8ec1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002e0853de8ac8ec1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108896227434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1"
            },
            "tags_all": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-0d684cf1bb6c22310"
          },
          "dependencies": [
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108896227434:subnet/subnet-0b43fcb2d309e48b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b43fcb2d309e48b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108896227434",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-2"
            },
            "tags_all": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-0d684cf1bb6c22310"
          },
          "dependencies": [
            "aws_vpc.aws_asg_and_lb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_asg_and_lb_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:108896227434:vpc/vpc-0d684cf1bb6c22310",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-091cbe3174ce6f66a",
            "default_route_table_id": "rtb-0b2f93ac7bfa3bbc7",
            "default_security_group_id": "sg-04758c25f014d39b1",
            "dhcp_options_id": "dopt-05b6f701bb77bc1c3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d684cf1bb6c22310",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2f93ac7bfa3bbc7",
            "owner_id": "108896227434",
            "tags": {
              "Name": "asg_and_lb_vpc_aws"
            },
            "tags_all": {
              "Name": "asg_and_lb_vpc_aws"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}